update weekly translations dev-3647

--- a/Das_Schwarze_Auge_5/translations/en.json
+++ b/Das_Schwarze_Auge_5/translations/en.json
@@ -185,9 +185,9 @@
   "Fuchssinn": "Fox Sense",
   "Geborener-Redner-Regel-Pub": "\n\t\t\t\t\t\t<b>Rules:</b> Skill checks using <i>Persuasion (Oration)</i> receive a bonus of 1.<br>\n\t\t\t\t\t\t<b>Publication:</b> VR01 - Core Rules p. 168",
   "Geborener-Redner": "Natural Orator",
-  "Geweihter-Regel-Pub": "\n\t\t\t\t\t\t<b>Regel:</b> Der Geweihte erhält als Karmaenergie-Grundwert 20 KaP. Der Vorteil beinhaltet nicht die Sonderfertigkeit Tradition. Diese muss einzeln erworben werden. Jeder Geweihte muss mit einer Tradition starten (eine Tradition ist eine spezielle Sonderfertigkeit). Ein Held kann auch im späteren Verlauf seines Lebens diesen Vorteil erwerben und Geweihter werden. Allerdings kann man nur eine geweihte Tradition besitzen. Ein Erwerb einer weiteren geweihten Tradition ist nicht möglich.<br>\n\t\t\t\t\t\t<b>Publikation:</b> VR01 - Regelwerk S. 165",
+  "Geweihter-Regel-Pub": "\n\t\t\t\t\t\t<b>Rules:</b> The hero receives a karma base stat of 20 karma points (KP). Each Blessed One must also begin the game with a Tradition (a special ability - see page 316), which you must buy separately. Also, you can be consecrated to only one deity at a time - it is not possible to buy another Tradition. A hero who desires to become a Blessed One may acquire this advantage later in life.<br>\n\t\t\t\t\t\t<b>Publication:</b> VR01 - Core Rules p. 164",
   "Geweihter": "Blessed",
-  "Giftresistenz-Regel-Pub": "\n\t\t\t\t\t\t<b>Regel:</b> Eine Giftresistenz verbessert Zähigkeit und Seelenkraft um 1 pro Stufe, wenn es darum geht, Giften zu widerstehen.<br>\n\t\t\t\t\t\t<b>Publikation:</b> VR01 - Regelwerk S. 165",
+  "Giftresistenz-Regel-Pub": "\n\t\t\t\t\t\t<b>Rules:</b> Resistant to Poison raises your Toughness and Spirit by 1 per level when resisting poison.<br>\n\t\t\t\t\t\t<b>Publication:</b> VR01 - Core Rules p. 169",
   "Giftresistenz": "Resistant to Poison",
   "Glück-Regel-Pub": "\n\t\t\t\t\t\t<b>Regel:</b> Das für den Helden erreichbare Maximum an Schicksalspunkten steigt hierdurch um 1 je Stufe und der Held er erhält diesen Schip gleich zu Spielbeginn zu seinem Vorrat.<br>\n\t\t\t\t\t\t<b>Publikation:</b> VR01 - Regelwerk S. 165",
   "Glück": "Luck",
@@ -561,7 +561,7 @@
   "Rote-und-Weiße-Kamele": "Red and White Camels",
   "Schaumkuss": "Schaumkuss",
   "Schlacht-von-Jergan": "Battle for Jergan",
-  "Schlaftrunk": "Schlaftrunk",
+  "Schlaftrunk": "Sleeping potion",
   "Schokolade": "Chocolate",
   "Schwarze-Wut": "Black Rabies",
   "Spinett": "Spinet",
@@ -2104,7 +2104,7 @@
   "Zeremoniemod-1-je-4-FW": "Zeremoniemod. (1 je 4 in FW)",
   "Ort": "Ort",
   "Heiligtum-der-Götter": "Heiligtum der Gottheit",
-  "Tempel-der-Götter": "Tempel der Gottheit (geweihter Boden)",
+  "Tempel-der-Götter": "Temple of the god (sacred ground)",
   "Heiligtum-oder-Tempel-außerhalb-des-eigenen-Pantheon": "Heiligtum oder Tempel eines Gottes außerhalb des Pantheons der eigenen Gottheit",
   "Heiligtum-oder-Tempel-feindseliger-Gott": "Heiligtum oder Tempel eines feindseligen Gottes",
   "Unheiligtum-Erzdämon": "Unheiligtum eines Erzdämons",
@@ -2120,8 +2120,8 @@
   "Ackersegen-Regel": "\n  \t\t\t\t\t\t\t<b>Probe:</b> MU/KL/IN <br>\n  \t\t\t\t\t\t\t<b>Wirkung:</b> Der Geweihte wandert über das frisch gesäte Feld und segnet die Ackerfrüchte. Die Wirkung des Segens entfaltet sich auf einer Fläche von bis zu QS x 1.000 Quadratschritt (der Geweihte darf vom Zentrum des betroffenen Gebietes aber nicht weiter weg sein, als die Reichweite der Liturgie beträgt). Die Ackerfrucht ist weniger anfällig gegen Krankheiten und Ungeziefer, während alle anderen Pflanzen auf dem Acker in ihrem Wachstum gehemmt werden. Der Segen schützt die Pflanzen jedoch nicht vor äußeren Einflüssen wie Dürre, Überflutung oder Hagelschlag. <br>\n  \t\t\t\t\t\t\t<b>Zeremoniedauer:</b> 2 Stunde <br>\n\t\t\t\t\t\t\t<b>KaP-Kosten:</b> 16 KaP <br>\n\t\t\t\t\t\t\t<b>Reichweite:</b> Sicht<br>\n\t\t\t\t\t\t\t<b>Wirkungsdauer:</b> ein Wachstumszyklus (zwischen 6 und 12 Monaten) <br>\n\t\t\t\t\t\t\t<b>Zielkategorie:</b> Pflanzen <br>\n\t\t\t\t\t\t\t<b>Verbreitung:</b> Peraine (Landwirtschaft) <br>\n\t\t\t\t\t\t\t<b>Steigerungsfaktor:</b> B <br>\n\t\t\t\t\t\t\t<b>Publikation:</b> VR01 - Regelwerk S. 331",
   "Exorzismus": "Exorzismus",
   "Exorzismus-Regel": "\n  \t\t\t\t\t\t\t<b>Probe:</b> MU/IN/CH (modifiziert um SK des Wesens) <br>\n  \t\t\t\t\t\t\t<b>Wirkung:</b> Mit einem Exorzismus werden Dämonen und Geister ausgetrieben, die Besitz von einem Lebewesen ergriffen haben. Gelingt der Exorzismus, wird der Dämon oder Geist aus dem Körper vertrieben und zurück in die Niederhöllen oder ins Totenreich verbannt. <br>\n  \t\t\t\t\t\t\t<b>Zeremoniedauer:</b> 8 Stunden <br>\n\t\t\t\t\t\t\t<b>KaP-Kosten:</b> 32 KaP <br>\n\t\t\t\t\t\t\t<b>Reichweite:</b> 4 Schritt<br>\n\t\t\t\t\t\t\t<b>Wirkungsdauer:</b> sofort <br>\n\t\t\t\t\t\t\t<b>Zielkategorie:</b> Dämonen, Geister <br>\n\t\t\t\t\t\t\t<b>Verbreitung:</b> allgemein, Praios (Antimagie), Boron (Traum) <br>\n\t\t\t\t\t\t\t<b>Steigerungsfaktor:</b> B <br>\n\t\t\t\t\t\t\t<b>Publikation:</b> VR01 - Regelwerk S. 331",
-  "Geweihter-Panzer": "Geweihter Panzer",
-  "Geweihter-Panzer-Regel": "\n  \t\t\t\t\t\t\t<b>Probe:</b> MU/IN/CH <br>\n  \t\t\t\t\t\t\t<b>Wirkung:</b> Die Rüstung des Geweihten gilt als geweiht. Wenn Dämonen den Geweihten angreifen, verursachen erfolgreiche Angriffe des Dämons 1W3 SP bei ihm, da er den Geweihten oder seine Rüstung berühren muss. <br>\n  \t\t\t\t\t\t\t<b>Zeremoniedauer:</b> 30 Minuten <br>\n\t\t\t\t\t\t\t<b>KaP-Kosten:</b> 16 KaP <br>\n\t\t\t\t\t\t\t<b>Reichweite:</b> selbst<br>\n\t\t\t\t\t\t\t<b>Wirkungsdauer:</b> QS x 15 Minuten <br>\n\t\t\t\t\t\t\t<b>Zielkategorie:</b> Kulturschaffende <br>\n\t\t\t\t\t\t\t<b>Verbreitung:</b> Ingerimm (Feuer und Handwerk), Kor (Gutes Gold), Rondra (Sturm), Swafnir (Tapferkeit) <br>\n\t\t\t\t\t\t\t<b>Steigerungsfaktor:</b> B <br>\n\t\t\t\t\t\t\t<b>Publikation:</b> VR01 - Regelwerk S. 331",
+  "Geweihter-Panzer": "Sacred Armor",
+  "Geweihter-Panzer-Regel": "\n  \t\t\t\t\t\t\t<b>Check:</b> COU/INT/CHA <br>\n  \t\t\t\t\t\t\t<b>Effect:</b> Your armor becomes sanctified. If demons attack you, they suffer 1D3 DP (ignoring PRO) for each successful attack they make against you, because they must touch you or your armor (see page 355). <br>\n  \t\t\t\t\t\t\t<b>Ceremonial Time:</b> 30 minutes <br>\n\t\t\t\t\t\t\t<b>KP Cost:</b> 16 KP <br>\n\t\t\t\t\t\t\t<b>Range:</b> self<br>\n\t\t\t\t\t\t\t<b>Duration:</b> QL x 15 minutes <br>\n\t\t\t\t\t\t\t<b>Target Category:</b> Intelligent Creatures<br>\n\t\t\t\t\t\t\t<b>Traditions:</b> Ingerimm (Fire and Craft), Kor (Good Gold), Rondra (Storm), Swafnir (Bravery) <br>\n\t\t\t\t\t\t\t<b>Improvement Cost:</b> B <br>\n\t\t\t\t\t\t\t<b>Publication:</b> VR01 - Core Rules p. 332",
   "Löwengestalt": "Löwengestalt",
   "Löwengestalt-Regel": "\n  \t\t\t\t\t\t\t<b>Probe:</b> MU/KL/IN <br>\n  \t\t\t\t\t\t\t<b>Wirkung:</b> Der Geweihte verwandelt sich in einen Löwen. Hierbei wird die Kleidung nicht mitverwandelt. In der Löwengestalt behält der Geweihte seine geistigen Eigenschaften und erhält die körperlichen Eigenschaften und Fähigkeiten des Löwen. Zudem kann er QS x 2 Punkte zusätzlich auf die körperlichen Eigenschaften des Löwen verteilen. In der Löwengestalt kann er keine übernatürlichen Fähigkeiten wie Zauber und Liturgien wirken. In Löwengestalt gilt der Geweihte als gesegnet. <br>\n  \t\t\t\t\t\t\t<b>Zeremoniedauer:</b> 30 Minuten <br>\n\t\t\t\t\t\t\t<b>KaP-Kosten:</b> 16 KaP <br>\n\t\t\t\t\t\t\t<b>Reichweite:</b> selbst<br>\n\t\t\t\t\t\t\t<b>Wirkungsdauer:</b> QS x 3 in Stunden <br>\n\t\t\t\t\t\t\t<b>Zielkategorie:</b> Lebewesen (nur der Geweihte selbst) <br>\n\t\t\t\t\t\t\t<b>Verbreitung:</b> Rondra (Schild, Sturm) <br>\n\t\t\t\t\t\t\t<b>Steigerungsfaktor:</b> B <br>\n\t\t\t\t\t\t\t<b>Publikation:</b> VR01 - Regelwerk S. 287",
   "Nebelleib": "Nebelleib",
