--- a/Forbidden_Lands/translations/fr.json
+++ b/Forbidden_Lands/translations/fr.json
@@ -15,13 +15,13 @@
 	"armor2-bonus-max": "Enregistre les bonus NON RÉDUITS de l'armure. @{armor2_bonus_max}",
 	"armor1-bonus-misc": "Modificateur de bonus divers (ajuste les dés de COMPÉTENCE). @{armor1_damage}",
 	"armor2-bonus-misc": "Modificateur de bonus divers (ajuste les dés de COMPÉTENCE). @{armor2_damage}",
-	"armor1-bonus-total": "Total GEAR and SKILL dice included for armor1. @{armor1_ar}",
-	"armor2-bonus-total": "Total GEAR and SKILL dice included for armor2. @{armor2_ar}",
+	"armor1-bonus-total": "Total des dés d'ÉQUIPEMENT et de COMPÉTENCE inclus pour l'armure1.  @{armor1_ar}",
+	"armor2-bonus-total": "Total des dés d'ÉQUIPEMENT et de COMPÉTENCE inclus pour l'armure2.  @{armor2_ar}",
 	"armor-helmet": "ARMURE/HEAUME",
 	"armor-rating": "Indice d'armure",
 	"armor-rating-abbr": "IA",
 	"armor-rating-u": "INDICE D'ARMURE",
-	"armor-rating-total": "Total GEAR dice included for armor1 + armor2. @{ar}",
+	"armor-rating-total": "Total des dés d'ÉQUIPEMENT inclus pour armure1 + armure2.  @{ar}",
 	"armor-roll": "Jet d'armure",
 	"armor-type": "Type d'Armure",
 	"arms-length-abbr": "Long. Bras",
@@ -226,8 +226,8 @@
 	"settings": "Paramètres",
 	"sheet-version-announcements": "Version de la fiche et annonces",
 	"shield": "Bouclier",
-	"shield-bonus": "Record the shield's CURRENT bonus up to MAX (adjusts GEAR dice) @{shield1_bonus}",
-	"shield-bonus-max": "Record the shield's UNDAMAGED bonus. @{shield1_bonus_max}",
+	"shield-bonus": "Enregistre les bonus ACTUELS du bouclier jusqu'au MAX (ajuste les dés d'ÉQUIPEMENT). @{shield1_bonus}",
+	"shield-bonus-max": "Enregistre les bonus NON RÉDUITS du bouclier. @{shield1_bonus_max}",
 	"shield-bonus-misc": "Miscellaneous bonus modifier (adjusts GEAR dice). @{shield1_bonus_misc}",
 	"shield-bonus-total": "Total GEAR dice included for Parry|Shove. @{shield1_bonus_total}",
 	"shield-u": "BOUCLIER",
@@ -284,9 +284,9 @@
 	"weapon-bonus-total": "Total GEAR dice included with the attack. @{repeating_weapons_$X_weapon_bonus_total}",
 	"weapon-damage": "Damage as per weapon tables. @{repeating_weapons_$X_weapon_damage}",
 	"weapon-damage-misc": "Miscellaneous damage modifier. @{repeating_weapons_$X_weapon_damage_misc}",
-	"weapon-damage-total": "Total damage included with the attack. @{repeating_weapons_$X_weapon_damage_total}",
-	"weapon-skill-misc": "Miscellaneous attack modifier (adjusts SKILL dice). @{repeating_weapons_$X_weapon_skill_misc}",
-	"weapon-skill-total": "Total SKILL dice included with the attack. @{repeating_weapons_$X_weapon_skill_total}",
+	"weapon-damage-total": "Total des dégâts inclus avec l'attaque.  @{repeating_weapons_$X_weapon_damage_total}",
+	"weapon-skill-misc": "Modificateur d'attaque divers (ajuste les dés de COMPÉTENCE). @{repeating_weapons_$X_weapon_skill_misc}",
+	"weapon-skill-total": "Total des dés de COMPÉTENCE inclus avec l'attaque. @{repeating_weapons_$X_weapon_skill_total}",
 	"weapon-type-base": "BASE dice as per weapon/skill type. @{repeating_weapons_$X_weapon_base_total}",
 	"weapon-type-skill": "Dés de COMPÉTENCE par type d'arme/compétence. @{repeating_weapons_$X_weapon_skill_value}",
 	"weapon-u": "ARMES",
