--- a/Shadowrun5thEdition/translations/fr.json
+++ b/Shadowrun5thEdition/translations/fr.json
@@ -51,7 +51,7 @@
     "charisma": "Charisme",
     "chemistry": "Chimie",
     "close": "Mêlée",
-    "closecombat": "Groupe Combat rapproché",
+    "closecombatgroup": "Close Combat Group",
     "clubs": "Armes contondantes",
     "cold": "Froid",
     "coldprotection": "Protection contre le froid",
@@ -135,7 +135,7 @@
     "favor": "Faveur",
     "file": "Fichier",
     "fire": "Feu",
-    "firearms": "Groupe armes à feu",
+    "firearmsgroup": "Firearms Group",
     "fireprotection": "Protection contre le feu",
     "firewall": "Pare-feu",
     "firstaid": "Premiers Soins",
@@ -200,6 +200,7 @@
     "m": "M",
     "magic": "Magie",
     "magicalskill": "Compétences magiques",
+    "magicalskills": "Magical Skills",
     "magicres": "Magie/Résonance",
     "mana": "Mana",
     "manipulation": "Manipulation",
