--- a/SavageWorlds-Tabbed/translations/fr.json
+++ b/SavageWorlds-Tabbed/translations/fr.json
@@ -113,7 +113,7 @@
     "max-reason": "Atouts/Capacités qui changent la pénalité maximale de blessures",
     "of": "sur",
     "fatigue": "Fatigue",
-    "max-fatigue": "Max Fatigue level",
+    "max-fatigue": "Niveau de fatigue max",
     "reduce-reason-fatigue": "Atouts/Capacités qui réduisent les pénalités de fatigue",
     "increase-reason-fatigue": "Handicaps/Capacités qui augmentent les pénalités de fatigue",
     "max-reason-fatigue": "Atouts/Capacités qui changent la pénalité maximale de fatigue",
@@ -165,8 +165,8 @@
     "use-skill-specialization": "Utiliser la Spécialisation de Compétences",
     "fencing-style-note": "Style et Écoles d'Escrime fournissent au personnage des bonuses selon le style utilisé. Cette règle est utilisée dans All For One",
     "fencing-styles-n-schools": "Styles &amp; Écoles d'Escrime",
-    "ag": "Ag: ",
-    "show-all": "All",
+    "ag": "Ag : ",
+    "show-all": "Tout",
     "show-boating": "Afficher Navigation",
     "show-climbing": "Afficher Escalade",
     "show-driving": "Afficher Pilotage",
@@ -293,7 +293,7 @@
     "ships-purse-and-misc": "Ship's purse and misc. tidbits for ports of call, etc.",
     "flying-ship": "Astronef",
     "size": "Taille",
-    "char-size": "Size{{0}}",
+    "char-size": "Taille{{0}}",
     "show-size-fields": "Show Size fields",
     "climb": "Manoeuvrabilité",
     "energy": "Énergie",
@@ -404,7 +404,7 @@
     "deadlands-hell-on-earth": "Deadlands: Hell on Earth",
     "east-texas-university": "East Texas University",
     "interface-zero-20": "Interface zéro 2.0",
-    "interface-zero-30": "Interface Zero 3.0",
+    "interface-zero-30": "Interface Zéro 3.0",
     "lankhmar": "Lankhmar",
     "the-last-parsec": "Le dernier Parsec",
     "necessary-evil": "Mal nécessaire",
@@ -465,7 +465,7 @@
     "scholarship-rename": "Renamed the academics derived stat to scholarship for both clarity and SWADE-ETU compatibility",
     "40001-refactor": "Behind the scenes attribute name refactoring",
     "smooth-dice-fix": "Added option for dice smoothing, adding 1dF to every roll. This specifically fixes the probability quirk where d4-2 was more likely to succeed against TN 4 than d6-2.",
-    "40000-typos": "General typo fixes",
+    "40000-typos": "Correction générale des erreurs de typographie",
     "IZ30patch": "Added support for Interface Zero 3.0 with toggleable augmentations and a new Street Cred",
     "interface-zero": "Interface zéro 2.0",
     "code-name-character": "Nom de Code (Nom du Personnage)",
@@ -506,8 +506,8 @@
     "threat-rating-rank-text": "Change the Rank designation to Threat Rating ala Necessary Evil.",
     "threat-rating-rank": "Threat Rating (Rank)",
     "activities-and-exams-text": "Show fields to record Activities and Exams. Used in ETU.",
-    "activities-and-exams": "Activities & Exams",
-    "archetype-text": "The character's archetype. Used in settings like All for One.",
+    "activities-and-exams": "Activités & Examens",
+    "archetype-text": "L'archétype du personnage. Utilisé dans des univers comme All for One.",
     "augmentations-text": "Record the Character's Augmentations. Appropriate for Interface Zero 2.0 or any other cyberpunk/sci-fi setting where people can implant augmentation devices.",
     "augmentations": "Augmentations",
     "burn-text": "Track the character's Burn. Appropriate for the Juicer Iconic Framework in Rifts.",
@@ -527,7 +527,7 @@
     "minor-major": "Mineur/Majeur",
     "motivation-text": "Motivation can be used in settings where the character's motivation is important, such All for One.",
     "occupation-text": "Can be used for any setting where a character's occupation is important.",
-    "permanent-injuries-text": "Record the Character's Permanent Injuries.",
+    "permanent-injuries-text": "Enregistre les blessures permanentes du personnage.",
     "rippertech-text": "'Add Rippertech to the equipment section. Appropriate for Rippers",
     "ship-name-text": "Can be used for any setting where the characters may have a ship of some sort.",
     "ship-name": "Nom du vaisseau",
@@ -551,8 +551,8 @@
     "attack": "Attaque",
     "defense-options": "Options de Défense",
     "defend": "Défendre",
-    "misc-options": "Misc. Options",
-    "melee-attack-options": "Melee Attack Options",
+    "misc-options": "Options diverses",
+    "melee-attack-options": "Options d’attaque de mêlée",
     "attack-option": "Option d’attaque",
     "why-do-it": "Pourquoi le faire",
     "called-shot": "Tir Précis",
@@ -562,7 +562,7 @@
     "small-target-mod": "Petite cible : -4 au toucher, Dégâts spéciaux",
     "tiny-target-mod": "Tiny Target: -6 to hit, Special Damage",
     "disarm": "Désarmer",
-    "disarm-text": "Renders your opponent weaponless, requires a called shot.",
+    "disarm-text": "Désarme votre adversaire, requiert un coup précis.",
     "draw-n-attack": "Dégainer & Attaquer",
     "draw-n-attack-text": "Get a jab in quickly. -2 to Fighting.",
     "the-drop-text": "You're catching someone completely unawares (GM's discretion). +4 to Fighting and Damage.",
@@ -700,7 +700,7 @@
     "spi-u": "(ÂME)",
     "str-u": "(FOR)",
     "vig-u": "(VIG)",
-    "fencingstyle": "Fencing Style",
+    "fencingstyle": "Style d'escrime",
     "fencing-info": "Fencing School Information",
     "linked-attribute": "Attribut lié",
     "hindrance-desc": "Description/détails",
@@ -717,8 +717,8 @@
     "money": "Argent",
     "pieces-of-eight": "Pieces of Eight",
     "money-clams": "Clams",
-    "money-credits": "Credits",
-    "money-lankhmar": "Lankhmar Currency",
+    "money-credits": "Crédits",
+    "money-lankhmar": "Monnaie de Lankhmar",
     "livre": "Livre",
     "rules-modifications": "Rules Modifications",
     "variable-bonus-damage": "Bonus de dégâts variable",
@@ -809,15 +809,15 @@
     "captain": "Capitaine",
     "ship-type": "Ship Type",
     "pay": "Pay",
-    "vehicle-manufacturer": "Vehicle Manufacturer",
-    "driver": "Driver",
-    "vehicle-type": "Vehicle Type",
+    "vehicle-manufacturer": "Constructeur du véhicule",
+    "driver": "Conducteur",
+    "vehicle-type": "Type de véhicule",
     "walker-type": "Walker Type",
-    "flying-vehicle": "Flying Vehicle",
-    "vehicle-name": "Vehicle Name",
-    "armaments": "Armaments",
+    "flying-vehicle": "Véhicule volant",
+    "vehicle-name": "Nom du véhicule",
+    "armaments": "Armements",
     "walker-name": "Walker Name",
-    "cybernetics": "Cybernetics",
+    "cybernetics": "Cybernétiques",
     "cybernetic-enhancement": "Cybernetic Enhancement",
     "whisper-all-rolls-to-gm": "Murmurer tous les jets au MJ",
     "whisper-roll-to-gm": "Murmurer au MJ",
@@ -829,9 +829,9 @@
     "sheet-configuration": "Configuration",
     "sheet-documentation": "Documentation",
     "documentation": "Documentation",
-    "changes-this-release": "Changes this release:",
+    "changes-this-release": "Changements dans cette version :",
     "complete-rewrite-from-the-ground-up": "Complete re-write from the ground up",
-    "about-half-the-size": "The sheet is about half the size of it used to be",
+    "about-half-the-size": "la feuille fait à peu près la moitié de son ancienne taille",
     "complete-visual-redesign": "Complete visual redesign",
     "layout-more-streamlined": "This layout should be more streamlined",
     "commonly-used-features-on-one-page": "The most commonly used features on one page",
@@ -952,15 +952,15 @@
     "skills-can-be-named-anything": "Skills can be named anything you like.",
     "changes-reflected-in-all-areas": "Changes to skill names will be reflected in all areas of the character sheet",
     "internationalization-expansion": "Various items were missing or had malformed data-i18n tags.",
-    "thanks-gronyon-for-your-help": "thanks-gronyon-for-your-help",
+    "thanks-gronyon-for-your-help": "merci-gronyon-pour-ton-aide",
     "ability-to-rename-skills": "Ability to rename skills",
     "nerves-of-steel-type-functionality-for-fatigue": "Nerves of Steel type functionality for Fatigue",
     "wealth-modifier-for-wealth-rolls": "Wealth modifier for Wealth Rolls",
     "extra-config": "The Extra option sets new characters to default as Extras, instead of Wild Cards.",
     "dont-use": "Don't Use",
-    "none-of-these": "None of these",
-    "sheet-background": "Sheet Background",
-    "sheet-logo": "Sheet Logo",
+    "none-of-these": "Aucun de ceux-là",
+    "sheet-background": "Fond de la feuille",
+    "sheet-logo": "logo de la feuille",
     "show-scholarship": "Show Scholarship (Formerly the Academics Derived Stat)",
     "money-label": "Money Label",
     "use-class-for-etuu": "Use Class for ETU",
@@ -993,7 +993,7 @@
     "show-nt-desc": "Check this box to use the Neural Toughness Stat.",
     "show-reason": "Show Reason",
     "show-reason-desc": "Check this box to use the Neural Toughness Stat.",
-    "show-sanity": "Show Sanity",
+    "show-sanity": "Afficher la santé mentale",
     "show-sanity-desc": "Check this box to use the Sanity Stat.",
     "show-size-desc": "Check this box to show the Size field under Derived Stats. This will appear above Toughness and modify Toughness.",
     "show-status": "Show Status",
@@ -1016,7 +1016,7 @@
     "parahuman-origin-desc": "Check this box to show where to enter a character's origin of parahuman abilities.",
     "use-ppe-desc": "Check this box to change the Power Points label to PPE.",
     "use-threat-rating-desc": "Check this box to change the Rank label to Threat Rating.",
-    "use-species": "Use Species",
+    "use-species": "Utiliser les espèces",
     "use-species-desc": "Check this box to change the Race label to Species.",
     "show-activities-and-exams": "Show Activities & Exams",
     "activities-exams-desc": "Check this box to show the Activities & Exams section.",
@@ -1158,7 +1158,7 @@
     "skill-allowed-desc": "Cocher pour autoriser l'utilisation de cette compétence dans votre univers.",
     "known-issues": "Bugs connus",
     "statblock-doesnt-support": "Statblock Output Button doesn't currently output:",
-    "spell-information": "Spell information",
+    "spell-information": "Information du sort",
     "cybernetics-slash-augmentations": "Cybernetics/Augmentations",
     "talismans-are-missing-from-sheet": "Talismans are missing from the sheet completely",
     "derived-stats-not-using-sheet-workers": "Derived Stats weren't using Sheet Workers and should have been.",
@@ -1189,12 +1189,12 @@
     "arcane-background-indicator-description": "Arcane Background Indicator: When there's more than one (1) arcane background, the Arcane Background Indicaor allows you to pick a color to associate with each arcane background. Once an individual power has been tied to an arcane background (defaults to the first arcane background), the power row will use the indicator as a background color, allowing you to quickly identify which arcane background each power goes with.  The power points display will also use the Arcane Background Indicator as the background color as quick reminder of what each color represents.",
     "fixed-copyright-issue": "Fixed the copyright notification issues.",
     "start-attributes-at-d6-not-d4": "Attributs par défaut à d6 au lieu de d4",
-    "start-attributes-at-d6": "Start Attributes at d6",
+    "start-attributes-at-d6": "Attributs par défaut à d6",
     "effect": "Effet",
     "activate-talisman": "Activer Talisman",
     "whisper-stat-block": "Whisper Stat Block",
-    "consumable": "Consumable",
-    "empty": "Empty",
+    "consumable": "Consommable",
+    "empty": "Vide",
     "use-consumables": "Use Consumables",
     "use-consumables-mod": "Use Consumables Mod",
     "consumable-roll-text": "rolls for {{0}} consumption and gets a",
