--- a/Shadowrun5thEdition/translations/es.json
+++ b/Shadowrun5thEdition/translations/es.json
@@ -51,7 +51,7 @@
     "charisma": "Charisma",
     "chemistry": "Chemistry",
     "close": "Close",
-    "closecombat": "Close Combat Group",
+    "closecombatgroup": "Close Combat Group",
     "clubs": "Clavas",
     "cold": "Frío",
     "coldprotection": "Protección del frío",
@@ -135,7 +135,7 @@
     "favor": "Favor",
     "file": "Archivo",
     "fire": "Fuego",
-    "firearms": "Firearms Group",
+    "firearmsgroup": "Firearms Group",
     "fireprotection": "Protección del fuego",
     "firewall": "Cortafuegos",
     "firstaid": "Primeros auxilios",
@@ -200,6 +200,7 @@
     "m": "M",
     "magic": "Magic",
     "magicalskill": "Magical Skill",
+    "magicalskills": "Magical Skills",
     "magicres": "Magic/Resonance",
     "mana": "Mana",
     "manipulation": "Manipulación",
