--- a/Shadowrun5thEdition/translations/zu.json
+++ b/Shadowrun5thEdition/translations/zu.json
@@ -51,7 +51,7 @@
     "charisma": "crwdns81046:0crwdne81046:0",
     "chemistry": "crwdns81048:0crwdne81048:0",
     "close": "crwdns81050:0crwdne81050:0",
-    "closecombat": "crwdns81052:0crwdne81052:0",
+    "closecombatgroup": "crwdns139526:0crwdne139526:0",
     "clubs": "crwdns81054:0crwdne81054:0",
     "cold": "crwdns81056:0crwdne81056:0",
     "coldprotection": "crwdns81058:0crwdne81058:0",
@@ -135,7 +135,7 @@
     "favor": "crwdns81210:0crwdne81210:0",
     "file": "crwdns81212:0crwdne81212:0",
     "fire": "crwdns81214:0crwdne81214:0",
-    "firearms": "crwdns81216:0crwdne81216:0",
+    "firearmsgroup": "crwdns139528:0crwdne139528:0",
     "fireprotection": "crwdns81218:0crwdne81218:0",
     "firewall": "crwdns81220:0crwdne81220:0",
     "firstaid": "crwdns81222:0crwdne81222:0",
@@ -200,6 +200,7 @@
     "m": "crwdns81334:0crwdne81334:0",
     "magic": "crwdns81336:0crwdne81336:0",
     "magicalskill": "crwdns81338:0crwdne81338:0",
+    "magicalskills": "crwdns139530:0crwdne139530:0",
     "magicres": "crwdns81342:0crwdne81342:0",
     "mana": "crwdns81344:0crwdne81344:0",
     "manipulation": "crwdns81346:0crwdne81346:0",
