update so very many bugs

--- a/Shadowrun5thEdition/translations/en.json
+++ b/Shadowrun5thEdition/translations/en.json
@@ -1,4 +1,4 @@
-{
+{ 
     "a": "A",
     "acc": "ACC",
     "accel": "Accel",
@@ -189,7 +189,7 @@
     "level": "Level",
     "licenses": "Licenses",
     "liftcarry": "Lift & Carry",
-    "limit": "Limit",
+    "limit":"Limit",
     "limits": "Limits",
     "locksmith": "Locksmith",
     "logic": "Logic",
@@ -246,8 +246,8 @@
     "overflow": "Overflow",
     "overflowmodifier": "Overflow Modifier",
     "p": "P",
-    "high pain tolerance": "high pain tolerance",
-    "low pain tolerance": "low pain tolerance",
+    "high pain tolerance":"high pain tolerance",
+    "low pain tolerance":"low pain tolerance",
     "damage compensators": "Damage Compensators (P/S): ",
     "paintolerance": "Pain Tolerance",
     "palming": "Palming",
@@ -261,7 +261,7 @@
     "physical_limit": "Physical Limit",
     "physicalbonus": "Physical Bonus",
     "physicaldamagetrack": "Physical Damage Track",
-    "physicallimit": "Physical Limit:",
+    "physicallimit":"Physical Limit:",
     "physicalskills": "Physical Skills",
     "pilot": "pilot",
     "pilotaerospace": "Pilot Aerospace",
@@ -276,7 +276,7 @@
     "power": "Power",
     "powers": "Powers",
     "pr": "Professional Rating",
-    "prep": "Prep...",
+    "prep":"Prep...",
     "primary": "Primary",
     "primaryarmor": "Primary Armor",
     "primarylifestyle": "Primary Lifestyle",
@@ -301,7 +301,7 @@
     "reaction": "Reaction",
     "recoil": "Recoil",
     "registering": "Registering",
-    "relatedlifestyle": "Related Lifestyles",
+    "relatedlifestyle": "Related Lifestyles", 
     "resonance": "Resonance",
     "resonanceskills": "Resonance Skills",
     "rituals": "Rituals",
@@ -385,19 +385,19 @@
     "importer": "Importer",
     "importecharacter": "Import Character",
     "apply": "Apply",
-    "importertext": "You can import a character with a JSON from Chummer. The game owner must set a Compendium in the Game Settings. It does not matter which one you pick. Charactermancer software simply requires one be picked.",
-    "character name": "character name",
-    "player name": "player name",
-    "walk modifier": "walk modifier",
-    "run modifier": "run modifier",
-    "movement modifier": "movement modifier",
-    "preperations": "preperations",
-    "force": "force",
-    "potency": "potency",
-    "trigger": "trigger",
-    "command": "command",
-    "contact": "contact",
-    "time": "time",
-    "adeptpowers": "Adept Powers or Other Abilities",
-    "whisper rolls to gm": "whisper rolls to gm"
+    "importertext": "You can import a character with a JSON from Chummer. The game owner must set a Compendium in the Game Settings. It does not matter which one you pick. Charactermancer software simply requires one be picked."
+    ,"character name":"character name"
+    ,"player name":"player name"
+    , "walk modifier": "walk modifier"
+    ,"run modifier": "run modifier"
+    ,"movement modifier": "movement modifier"
+    ,"preperations": "preperations"
+    ,"force": "force"
+    ,"potency": "potency"
+    ,"trigger": "trigger"
+    ,"command": "command"
+    ,"contact": "contact"
+    ,"time":"time"
+    ,"adeptpowers": "Adept Powers or Other Abilities"
+    ,"whisper rolls to gm":"whisper rolls to gm"
 }
