Update es.json (first part)

--- a/D&D_3-5/translations/es.json
+++ b/D&D_3-5/translations/es.json
@@ -23,7 +23,7 @@
 	"deity": "Deidad",
 	"class": "Clase",
 	"level": "Nivel",
-	"hit-dice-i": "HD",
+	"hit-dice-i": "DG",
 	"age": "Edad",
 	"height": "Altura",
 	"weight": "Peso",
@@ -31,7 +31,7 @@
 	"hair": "Pelo",
 	"stats": "Stats",
 	"weapons": "Armas",
-	"armor-class-i": "AC",
+	"armor-class-i": "CA",
 	"equipment": "Equipo",
 	"skills": "Habilidades",
 	"spells": "Hechizos",
@@ -39,8 +39,8 @@
 	"miscellaneous": "Misc",
 	"all": "Todo",
 	"abilities": "Habilidades",
-	"ability-scores": "Ability Scores",
-	"ability": "Ability",
+	"ability-scores": "Puntuaciones de Características",
+	"ability": "Característica",
 	"total": "Total",
 	"modifier": "Mod",
 	"base": "Base",
@@ -52,145 +52,145 @@
 	"intelligence-i": "INT",
 	"wisdom-i": "SAB",
 	"charisma-i": "CAR",
-	"show-ability-macros": "Show Ability Macros",
-	"hit-points-i": "HP",
+	"show-ability-macros": "Mostrar Macros de Características",
+	"hit-points-i": "PG",
 	"hit-points": "Puntos de Golpe",
-	"current-hit-points": "Current HP",
+	"current-hit-points": "PG Actuales",
 	"max": "Max",
-	"nonlethal-damage": "Nonlethal Damage",
-	"initiative-u": "INITIATIVE",
-	"dexterity-modifier": "Dex Mod",
-	"miscellaneous-modifier-a": "Misc Mod",
+	"nonlethal-damage": "Daño No Letal",
+	"initiative-u": "INICIATIVA",
+	"dexterity-modifier": "Mod Des",
+	"miscellaneous-modifier-a": "Mod Misc",
 	"speed-u": "VELOCIDAD",
 	"speed": "Velocidad",
-	"alternate-movement": "Alternate Movement",
+	"alternate-movement": "Movimiento Alternativo",
 	"fly": "Volar",
 	"perfect": "Perfecto",
 	"good": "Bien",
 	"average": "Medio",
 	"poor": "Pobre",
 	"clumsy": "Torpe",
-	"none": "None",
+	"none": "Ninguno",
 	"maneuverability": "Maniobrabilidad",
 	"glide": "Planear",
 	"climb": "Trepar",
 	"burrow": "Cavar",
 	"swim": "Nadar",
 	"armor-class": "Clase de armadura",
-	"ability-modifier-a": "Ability Mod",
-	"armor-bonus-a": "Armor Bns",
-	"size-modifier-a": "Size Mod",
-	"dodge": "Dodge",
-	"natural-armor-a": "Nat. Armor",
-	"deflection": "Deflection",
-	"armor-check-penalty-i": "AC Pen",
-	"touch-u": "TOUCH",
-	"flat-footed-u": "FLAT-FOOTED",
-	"immobile": "Immobile",
-	"damage-reduction": "Damage Reduction",
-	"saves-combat-notes": "Saves, Combat, Notes",
-	"saving-throws-s": "Saving<br>Throws",
-	"base-save-s": "Base<br>Save",
-	"ability-modifier-s": "Ability<br>Modifier",
-	"epic-save-bonus-s": "Epic Save<br>Bonus",
-	"magic-modifier": "Magic<br>Modifier",
-	"miscellaneous-modifier-s": "Misc<br>Modifier",
-	"temporary-modifier-s": "Temp<br>Modifier",
-	"fortitude": "Fortitude",
-	"constitution": "Constitution",
-	"reflex": "Reflex",
-	"dexterity": "Dexterity",
-	"will": "Will",
-	"wisdom": "Wisdom",
-	"show-save-macros": "Show Save Macros",
-	"spell-resistance": "Spell Resist",
-	"arcane-spell-failure": "Arcane Spell Failure",
-	"base-attack": "Base Attack",
-	"grapple": "Grapple",
-	"base-attack-bonus-epic-attack-bonus-i": "BAB+ EAB",
-	"strength-modifier-a": "Str Mod",
-	"base-attack-bonus-epic-attack-bonus-a": "Base AB<br>+ Epic AB",
-	"strength-modifier": "Strength<br>Modifier",
-	"size-modifier": "Size<br>Modifier",
-	"miscellaneous-modifier": "Misc<br>Modifier",
-	"temporary-modifier": "Temp<br>Modifier",
-	"melee": "Melee",
-	"attack-bonus": "Attack Bonus",
-	"ranged": "Ranged",
-	"show-grapple-and-base-attack-bonus-macros": "Show Grapple and Base Attack Macros",
-	"epic-levels": "Epic Levels",
-	"epic-save-bonus": "Epic Save Bonus",
-	"epic-attack-bonus": "Epic Attack Bonus",
-	"languages": "Languages",
-	"racial-abilities": "Racial Abilities",
-	"class-abilities": "Class Abilities",
-	"feats": "Feats",
-	"other": "Other",
-	"weapon": "Weapon",
-	"weapon-enhancement-a": "Weapon Enh",
-	"weapon-focus-s": "Weapon<br>Focus",
-	"weapon-specialization-as": "Weapon<br>Specialize",
-	"critical": "Critical",
-	"range": "Range",
-	"ammunition": "Ammunition",
-	"attack-ability": "Attack Ability",
-	"damage-ability": "Damage Ability",
-	"special-properties": "Special Properties",
-	"strength-a": "Str",
-	"dexterity-a": "Dex",
-	"half-strength": "1/2 Str",
-	"strength-and-half-strength": "Str+1/2Str",
-	"attack-calculation-a": "Attack Calc",
+	"ability-modifier-a": "Mod Caract.",
+	"armor-bonus-a": "Bns Armad.",
+	"size-modifier-a": "Mod Tamaño",
+	"dodge": "Esquiva",
+	"natural-armor-a": "Armadura Nat.",
+	"deflection": "Desvo",
+	"armor-check-penalty-i": "Pen CA",
+	"touch-u": "TOQUE",
+	"flat-footed-u": "FLANQUEEADO",
+	"immobile": "Immóvil",
+	"damage-reduction": "Reducción de Daño",
+	"saves-combat-notes": "Salvaciones, Combate, Notas",
+	"saving-throws-s": "Tiros<br>Salv.",
+	"base-save-s": "Salv.<br>Base",
+	"ability-modifier-s": "Modif.<br>Caract.",
+	"epic-save-bonus-s": "Bonus<br>Épico",
+	"magic-modifier": "Modif.<br>Mágico",
+	"miscellaneous-modifier-s": "Modif.<br>Misc",
+	"temporary-modifier-s": "Modif.<br>Temp",
+	"fortitude": "Fortaleza",
+	"constitution": "Constitución",
+	"reflex": "Reflejos",
+	"dexterity": "Dextreza",
+	"will": "Sab",
+	"wisdom": "Sabidura",
+	"show-save-macros": "Mostrar Macros de Salvación",
+	"spell-resistance": "Resistencia a conjuros",
+	"arcane-spell-failure": "Fallo de conjuro arcano",
+	"base-attack": "Ataque Base",
+	"grapple": "Presa",
+	"base-attack-bonus-epic-attack-bonus-i": "BAB+ BAE",
+	"strength-modifier-a": "Mod Fue",
+	"base-attack-bonus-epic-attack-bonus-a": "BA Base<br>+ BA Épico",
+	"strength-modifier": "Modif.<br>Fuerza",
+	"size-modifier": "Modif.<br>Tamaño",
+	"miscellaneous-modifier": "Modif.<br>Misc",
+	"temporary-modifier": "Modif.<br>Temp",
+	"melee": "Melé",
+	"attack-bonus": "Bonus Ataque",
+	"ranged": "Dist.",
+	"show-grapple-and-base-attack-bonus-macros": "Mostrar Macros de Presa y Ataque Base",
+	"epic-levels": "Niveles Épicos",
+	"epic-save-bonus": "Bns Salv. Épico",
+	"epic-attack-bonus": "Bns Ataque Épico",
+	"languages": "Idiomas",
+	"racial-abilities": "Rasgos Raciales",
+	"class-abilities": "Rasgos de Clase",
+	"feats": "Dotes",
+	"other": "Otros",
+	"weapon": "Arma",
+	"weapon-enhancement-a": "Mejora Arma",
+	"weapon-focus-s": "Foco<br>Arma",
+	"weapon-specialization-as": "Especializ.<br>Arma",
+	"critical": "Crítico",
+	"range": "Alcance",
+	"ammunition": "Munición",
+	"attack-ability": "Caract. Ataque",
+	"damage-ability": "Caract. Daño",
+	"special-properties": "Propiedades Especiales",
+	"strength-a": "Fue",
+	"dexterity-a": "Des",
+	"half-strength": "1/2 Fue",
+	"strength-and-half-strength": "Fue+1/2Fue",
+	"attack-calculation-a": "Calc Ataque",
 	"macro": "Macro",
-	"full-attack-macro": "Full Attack Macro",
-	"damage-calculation-a": "Damage Calc",
-	"critical-calculation-a": "Crit Calc",
-	"damage-macro": "Damage Macro",
-	"other-weapons": "Other Weapons",
-	"immobilized": "Immobilized",
-	"armor-check-penalty-a": "Armor Check Pen",
-	"armor": "Armor",
-	"armor-class-items-i": "AC Items",
-	"armor-name": "Armor Name",
+	"full-attack-macro": "Macro Ataque Comleto",
+	"damage-calculation-a": "Calc Daño",
+	"critical-calculation-a": "Calc Crítico",
+	"damage-macro": "Macro Daño",
+	"other-weapons": "Otras Armas",
+	"immobilized": "Inmobilizado",
+	"armor-check-penalty-a": "Pen Prueba Armad.",
+	"armor": "Armadura",
+	"armor-class-items-i": "Objetos CA",
+	"armor-name": "Nombre de Armadura",
 	"bonus": "Bonus",
-	"maximum-dexterity-a": " Max Dex ",
-	"check-penalty": " Check Penalty ",
-	"spell-failure": "Spell Failure",
-	"shield": "Shield",
-	"armor-bonus": "Armor Bonus",
-	"properties": "Properties",
-	"other-armor-class": "Other Armor Class",
-	"other-armor-class-i": "Other AC",
-	"ability-bonuses": "Ability Bonuses",
-	"bonus-for-armor-class-i": "Bonus for AC",
-	"touch-armor-class-a": "Touch AC",
-	"flat-footed-armor-class-i": "FF AC",
-	"immobilized-armor-class-i": "Immobilized AC",
-	"ability-armor-class-info": "Typically: part of AC and Touch AC. Penalty is part of FF AC and Immobilized AC, bonus is not. Capped by Armor and Load.",
-	"name": "Name",
-	"armor-class-bonus-i": "AC Bonus",
-	"capped?": "Capped?",
-	"capped-armor-class-bonus-i": "Capped AC Bonus",
-	"in-touch-armor-class?-i": "In Touch AC?",
-	"in-flat-footed-armor-class?-i": "In FF AC?",
-	"source/notes": "Source/Notes",
-	"dexterity-bonus-a": "Dex Bonus",
-	"dexterity-armor-class-modification-info": "Limited by Armor and Load; In AC and Touch AC; *Not in FF AC(except for penalty).",
-	"armor-class-info": " Component of AC and FF AC; Not component of Touch AC ",
-	"from-armor-above": "From Armor, above. ",
-	"from-shield-above": "From Shield, above. ",
-	"natural-armor": "Natural Armor",
-	"natural-armor-class-info": " Component of AC and FF AC; Not component of Touch AC ",
-	"current-natural-armor-bonus": "Current Natural Armor Bonus",
-	"dodge-armor-class-info": " Component of AC and Touch AC; Not a component of FF AC. ",
-	"current-dodge-bonus": "Current Dodge Bonus",
-	"deflection-armor-class-info": " Component of AC, Touch AC, and FF AC. ",
-	"current-deflection-bonus": "Current Deflection Bonus",
-	"miscellaneous-armor-class-i": "Misc AC",
-	"miscellaneous-armor-class-info": " Potential component of AC, Touch AC, FF or Immobilized AC. ",
-	"in-armor-class?-i": "In AC?",
-	"in-immobilized-armor-class?-i": "In Immobl AC?",
-	"current-miscellaneous-armor-class-bonus": "Current Misc AC Bonus",
+	"maximum-dexterity-a": " Des Máx ",
+	"check-penalty": " Penal. a Puebas ",
+	"spell-failure": "Fallo de Conjuro",
+	"shield": "Escudo",
+	"armor-bonus": "Bonus Armadura",
+	"properties": "Popiedades",
+	"other-armor-class": "Otras Clases de Armadura",
+	"other-armor-class-i": "Otras CA",
+	"ability-bonuses": "Bonus Caract.",
+	"bonus-for-armor-class-i": "Bonus para CA",
+	"touch-armor-class-a": "CA Toque",
+	"flat-footed-armor-class-i": "CA Flanqueado",
+	"immobilized-armor-class-i": "CA Inmobilizado",
+	"ability-armor-class-info": "Típicamente: parte de la CA y CA de Toque. El penalizador es parte de la CA Flanqueado y la CA Immobilizado, el bonus no. Limitado por Armadura y Carga.",
+	"name": "Nombre",
+	"armor-class-bonus-i": "Bonus CA",
+	"capped?": "Limit.?",
+	"capped-armor-class-bonus-i": "Bonus CA Limit.",
+	"in-touch-armor-class?-i": "En CA Toque?",
+	"in-flat-footed-armor-class?-i": "En CA Fl.?",
+	"source/notes": "Fuente/Notas",
+	"dexterity-bonus-a": "Bonus Des",
+	"dexterity-armor-class-modification-info": "Limitado por Armadura y Carga; En CA y CA Toque; *No en CA Fl.(excepto para penal.).",
+	"armor-class-info": " Parte de CA y CA Fl.; No parte de CA Toque ",
+	"from-armor-above": "De Armadura, arriba. ",
+	"from-shield-above": "De Escudo, arriba. ",
+	"natural-armor": "Armadura Natural",
+	"natural-armor-class-info": " Parte de CA y CA Fl.; No parte de CA Toque ",
+	"current-natural-armor-bonus": "Bonus de Armadura Natural Actual",
+	"dodge-armor-class-info": " Parte de CA y CA Toque; No parte de CA Fl. ",
+	"current-dodge-bonus": "Bonus de Esquiva Actual",
+	"deflection-armor-class-info": " Parte de CA, CA Toque, y CA Fl. ",
+	"current-deflection-bonus": "Bonus de Desvío Actual",
+	"miscellaneous-armor-class-i": "CA Misc",
+	"miscellaneous-armor-class-info": " Parte potencial de CA, CA Toque, CA Fl. o CA Inmobilizado. ",
+	"in-armor-class?-i": "En CA?",
+	"in-immobilized-armor-class?-i": "En CA Inmob.?",
+	"current-miscellaneous-armor-class-bonus": "Bonus CA Misc Actual ",
 	"encumbrance/load": "Encumbrance/Load",
 	"encumbrance-and-load": "Encumbrance and Load",
 	"light-load": " Light Load ",
