Update es.json (completed)

--- a/D&D_3-5/translations/es.json
+++ b/D&D_3-5/translations/es.json
@@ -191,188 +191,188 @@
 	"in-armor-class?-i": "En CA?",
 	"in-immobilized-armor-class?-i": "En CA Inmob.?",
 	"current-miscellaneous-armor-class-bonus": "Bonus CA Misc Actual ",
-	"encumbrance/load": "Encumbrance/Load",
-	"encumbrance-and-load": "Encumbrance and Load",
-	"light-load": " Light Load ",
-	"medium-load": " Medium Load ",
-	"heavy-load": " Heavy Load ",
-	"lift-over-head-a": " Lift Over ",
-	"lift-off-ground": " Lift Off Ground ",
-	"push/drag": " Push/ Drag ",
-	"or-less": "or less",
-	"weight-carried": " Weight Carried ",
-	"character-size-a": " Char Size ",
-	" data-i18n=": " Load ",
-	"speed-30ft": " Speed (30 ft.)",
-	"speed-20ft": " Speed (20 ft.)",
+	"encumbrance/load": "Capacidad/Carga",
+	"encumbrance-and-load": "Capacidad de Carga",
+	"light-load": " Carga Ligera ",
+	"medium-load": " Carga Media ",
+	"heavy-load": " Carga Pesada ",
+	"lift-over-head-a": " Levantar sobre la Cabeza ",
+	"lift-off-ground": " Levantar del Suelo ",
+	"push/drag": " Empujar/ Arrastrar ",
+	"or-less": "o menos",
+	"weight-carried": " Peso Transportado ",
+	"character-size-a": " Tamaño Personaje ",
+	" data-i18n=": " Carga ",
+	"speed-30ft": " Velocidad (30 pies)",
+	"speed-20ft": " Velocidad (20 pies)",
 	"run": " Run",
-	"colossal-quadruped": "Colossal Quadruped",
-	"gargantuan-quadruped": "Gargantuan Quadruped",
-	"huge-quadruped": "Huge Quadruped",
-	"large-quadruped": "Large Quadruped",
-	"medium-quadruped": "Medium Quadruped",
-	"small-quadruped": "Small Quadruped",
-	"tiny-quadruped": "Tiny Quadruped",
-	"diminutive-quadruped": "Diminutive Quadruped",
-	"fine-quadruped": "Fine Quadruped",
-	"light": "Light",
-	"heavy": "Heavy",
-	"feet-i": "ft",
-	"single-use-items": "Single Use Items",
-	"quantity-a": "Qty",
-	"cost(gp)": "Cost (gp)",
-	"total-cost(gp)-i": "T_Cost (gp)",
-	"weight-a": "Wt (<span name=\"attr_weightunit\" title=\"weightunit\"></span>)",
-	"total-weight-a": "T_Wt (<span name=\"attr_weightunit\" title=\"weightunit\"></span>)",
-	"hitpoints-i": "HPs",
-	"hardness-a": "Hard",
-	"location": "Location",
-	"total-cost": "Total Cost",
-	"gold-pieces-i": "gp",
-	"total-weight": "Total Weight:",
-	"not-copied": "Not Copied",
-	"total-weight-copied": "Total Weight Copied to Weight Carried",
-	"magic-items": "Magic Items",
-	"other-items": "Other Items",
-	"money": "Money",
-	"copper-pieces-iu": "CP",
-	"silver-pieces-iu": "SP",
-	"gold-pieces-iu": "GP",
-	"platinum-pieces-iu": "PP",
-	"skill-points-per-level-a": "skill points/lvl",
-	"skill-names": "Skill Names",
-	"total-bonus-s": "Total<br>Bonus",
-	"stat": "Stat",
-	"ability-modifier-as": "Ability<br>Mod.",
-	"ranks": "Ranks",
-	"armor-penalty-s": "Armor<br>Penalty",
-	"miscellaneous-modifier-as": "Misc<br>Mod.",
-	"appraise": "Appraise",
+	"colossal-quadruped": "Cuadrúpedo Colosal",
+	"gargantuan-quadruped": "Cuadrúpedo Gargantuesco",
+	"huge-quadruped": "Quadruped Enorme",
+	"large-quadruped": "Quadruped Grande",
+	"medium-quadruped": "Quadruped Mediano",
+	"small-quadruped": "Quadruped Pequeño",
+	"tiny-quadruped": "Quadruped Menudo",
+	"diminutive-quadruped": "Cuadrúpedo Diminuto",
+	"fine-quadruped": "Cuadrúpedo Insignific.",
+	"light": "Ligero",
+	"heavy": "Pesado",
+	"feet-i": "pies",
+	"single-use-items": "Objetos un solo Uso",
+	"quantity-a": "Cant",
+	"cost(gp)": "Coste (po)",
+	"total-cost(gp)-i": "Coste_T (gp)",
+	"weight-a": "Peso (<span name=\"attr_weightunit\" title=\"weightunit\"></span>)",
+	"total-weight-a": "P_T (<span name=\"attr_weightunit\" title=\"weightunit\"></span>)",
+	"hitpoints-i": "PGs",
+	"hardness-a": "Drza",
+	"location": "Ubicación",
+	"total-cost": "Coste Total",
+	"gold-pieces-i": "po",
+	"total-weight": "Peso Total:",
+	"not-copied": "No Copiado",
+	"total-weight-copied": "Peso Total Copiado a Peso Transportado",
+	"magic-items": "Objetos Mágicos",
+	"other-items": "Otros Objetos",
+	"money": "Dinero",
+	"copper-pieces-iu": "PC",
+	"silver-pieces-iu": "PP",
+	"gold-pieces-iu": "PO",
+	"platinum-pieces-iu": "PPT",
+	"skill-points-per-level-a": "puntos de habilidad/nivel",
+	"skill-names": "Nombre de Habilidad",
+	"total-bonus-s": "Bonus<br>Total",
+	"stat": "Caract.",
+	"ability-modifier-as": "Mod<br>Caract.",
+	"ranks": "Rangos",
+	"armor-penalty-s": "Penal.<br>Armad.",
+	"miscellaneous-modifier-as": "Mod<br>Misc",
+	"appraise": "Tasación",
 	"intelligence-a": "Int",
 	"not-applicable": "N/A",
-	"balance": "Balance",
-	"bluff": "Bluff",
-	"charisma-a": "Cha",
-	"concentration": "Concentration",
+	"balance": "Equilibrio",
+	"bluff": "Engañar",
+	"charisma-a": "Car",
+	"concentration": "Concentración",
 	"constitution-a": "Con",
-	"craft": "Craft",
-	"decipher-script": "Decipher Script",
-	"diplomacy": "Diplomacy",
-	"disable-device": "Disable Device",
-	"disguise": "Disguise",
-	"escape-artist": "Escape Artist",
-	"forgery": "Forgery",
-	"gather-information": "Gather Information",
-	"handle-animal": "Handle Animal",
-	"heal": "Heal",
-	"wisdom-a": "Wis",
-	"hide": "Hide",
-	"intimidate": "Intimidate",
-	"jump": "Jump",
-	"knowledge": "Knowledge",
-	"arcana": "Arcana",
-	"engineering-a": "Engineer",
+	"craft": "Artesanía",
+	"decipher-script": "Descifrar Escritura",
+	"diplomacy": "Diplomacia",
+	"disable-device": "Inutilizar Mecanismo",
+	"disguise": "Disfrazarse",
+	"escape-artist": "Escapismo",
+	"forgery": "Falsificar",
+	"gather-information": "Reunir Información",
+	"handle-animal": "Trato con Animales",
+	"heal": "Sanar",
+	"wisdom-a": "Sab",
+	"hide": "Esconderse",
+	"intimidate": "Intimidar",
+	"jump": "Saltar",
+	"knowledge": "Saber",
+	"arcana": "Arcano",
+	"engineering-a": "Ingeniería",
 	"dungeoneering-a": "Dungeon",
-	"geography": "Geography",
-	"history": "History",
+	"geography": "Geografía",
+	"history": "Historia",
 	"local": "Local",
-	"nature": "Nature",
-	"nobility": "Nobility",
-	"religion": "Religion",
-	"the-planes": "The Planes",
-	"listen": "Listen",
-	"move-silently": "Move Silently",
-	"open-lock": "Open Lock",
-	"perform": "Perform",
-	"profession": "Profession",
-	"ride": "Ride",
-	"search": "Search",
-	"sense-motive": "Sense Motive",
-	"sleight-of-hand": "Sleight of Hand",
-	"spellcraft": "Spellcraft",
-	"spot": "Spot",
-	"survival": "Survival",
-	"tumble": "Tumble",
-	"use-magic-device": "Use Magic Device",
-	"use-rope": "Use Rope",
-	"other-skills": "Other Skills",
-	"skill-name": "Skill Name",
-	"ability-stat-s": "Ability<br>Stat",
-	"trained-only": "Trained Only",
-	"caster-level": "Caster Level",
-	"spells-per-day": "Spells/Day",
+	"nature": "Naturaleza",
+	"nobility": "Nobileza",
+	"religion": "Religión",
+	"the-planes": "Los Planos",
+	"listen": "Escuchar",
+	"move-silently": "Movese Sigilosamente",
+	"open-lock": "Abrir Cerraduras",
+	"perform": "Interpretar",
+	"profession": "Oficio",
+	"ride": "Montar",
+	"search": "Buscar",
+	"sense-motive": "Averiguar Intenciones",
+	"sleight-of-hand": "Juego de Manos",
+	"spellcraft": "Conocimiento de Conjuros",
+	"spot": "Avistar",
+	"survival": "Supervivencia",
+	"tumble": "Piruetas",
+	"use-magic-device": "Usar Objeto Mágico",
+	"use-rope": "Uso de Cuerdas",
+	"other-skills": "Otras Habilidades",
+	"skill-name": "Nombre de Habilidad",
+	"ability-stat-s": "Caract.",
+	"trained-only": "Solo entrenada",
+	"caster-level": "Nivel de Lanzador",
+	"spells-per-day": "Conjuros/Día",
 	"zero": "0",
-	"first": "1st",
-	"second": "2nd",
-	"third": "3rd",
-	"fourth": "4th",
-	"fifth": "5th",
-	"sixth": "6th",
-	"seventh": "7th",
-	"eighth": "8th",
-	"ninth": "9th",
-	"casting-ability": "Casting Ability",
-	"spell-difficulty-classes": "Spell DC's",
-	"spell-penetration-a": "Spell Pen",
-	"spell-focus": "Spell Focus",
-	"abjuration": "Abjuration",
-	"conjuration": "Conjuration",
-	"divination": "Divination",
-	"enchantment": "Enchantment",
-	"evocation": "Evocation",
-	"illusion": "Illusion",
-	"necromancy": "Necromancy",
-	"transmutation": "Transmutation",
-	"power-points": "Power Points",
-	"spell-section": "Spell Section",
-	"use-prep": "Use/Prep",
-	"spell-name": " Spell name ",
-	"level-a": "Lvl",
-	"emote-macro": "Emote/macro",
-	"show?": "Show?",
-	"date": "Date",
-	"note-etc": "Note etc",
-	"ability-recalc-info": "Ability score recalc. Click this box to force a recalc of the ability scores.",
-	"weight-setup-info1": " Weight unit setup for weight calculations.",
-	"weight-setup-info2": " Unit should be an abbreviation of 2 or 3 characters.",
-	"scaling-factor": " Scaling factor ",
-	"unit": " Unit ",
+	"first": "1er",
+	"second": "2o",
+	"third": "3o",
+	"fourth": "4o",
+	"fifth": "5o",
+	"sixth": "6o",
+	"seventh": "7o",
+	"eighth": "8o",
+	"ninth": "9o",
+	"casting-ability": "Caract. Lanzador",
+	"spell-difficulty-classes": "CD Conjuro",
+	"spell-penetration-a": "Conj. Pen",
+	"spell-focus": "Espec. Conj.",
+	"abjuration": "Abjuración",
+	"conjuration": "Conjuración",
+	"divination": "Adivinación",
+	"enchantment": "Encantamiento",
+	"evocation": "Evocación",
+	"illusion": "Ilusión",
+	"necromancy": "Necromancia",
+	"transmutation": "Transmutación",
+	"power-points": "Puntos de Poder",
+	"spell-section": "Sección de Conjuros",
+	"use-prep": "Usad./Prep.",
+	"spell-name": " Nombre Conj. ",
+	"level-a": "Nivel",
+	"emote-macro": "Ext./macro",
+	"show?": "Mostrar?",
+	"date": "Fecha",
+	"note-etc": "Nota etc",
+	"ability-recalc-info": "Recalc. puntuación de caract. Pulsa para forzar un recalc. de la puntuación de caract.",
+	"weight-setup-info1": " Config de unidad de peso unit para cálculos de peso.",
+	"weight-setup-info2": " La unidad debe ser una abreviatura de 2 o 3 caracteres.",
+	"scaling-factor": " Factor de escala ",
+	"unit": " Unidad ",
 	"pound": " pound ",
-	"pronouns": "Pronouns",
-	"pronoun-setup-info": "For use in macros if desired. Enter your preferred pronoun for the following categories.",
-	"subjective-pronoun": "Subjective",
-	"he/she/it/they/etc": "he/she/it/they/etc",
-	"objective-pronoun": "Objective",
-	"him/her/it/them/etc": "him/her/it/them/etc",
-	"possessive-pronoun": "Possessive",
-	"his/hers/its/their/etc": "his/hers/its/their/etc",
-	"hit-dice": "Hit Dice",
-	"max-hit-points-a": "Max HP",
-	"initiative": "Initiative",
-	"armor-class-modification-info-a": "Armor Class Mod Info",
-	"touch": "Touch",
-	"touch-armor-class-i": "T AC",
-	"flat-footed-i": "FF",
-	"attack": "Attack",
-	"attack-macro": "Attack Macro",
-	"full-attack": "Full Attack",
-	"space": "Space",
-	"reach": "Reach",
-	"special-attacks": "Special Attacks",
-	"special-qualities": "Special Qualities",
-	"saves": "Saves",
+	"pronouns": "Pronombres",
+	"pronoun-setup-info": "Para su uso en macros si se desea. Introduce tu pronombre preferido para las siguientes categorías.",
+	"subjective-pronoun": "Subjetivo",
+	"he/she/it/they/etc": "el/ella/ellos/etc",
+	"objective-pronoun": "Objetivo",
+	"him/her/it/them/etc": "el/ella/ellos/etc",
+	"possessive-pronoun": "Posesive",
+	"his/hers/its/their/etc": "su/sus/etc",
+	"hit-dice": "Dado de Golpe",
+	"max-hit-points-a": "Máx PG",
+	"initiative": "Iniciativa",
+	"armor-class-modification-info-a": "Info Mod Clase Armad.",
+	"touch": "Toque",
+	"touch-armor-class-i": "CA T",
+	"flat-footed-i": "Fl.",
+	"attack": "Ataque",
+	"attack-macro": "Macro de Ataque",
+	"full-attack": "Ataque Compl.",
+	"space": "Espacio",
+	"reach": "Alcance",
+	"special-attacks": "Ataques Especiales",
+	"special-qualities": "Cualidades Especiales",
+	"saves": "Salvaciones",
 	"fortitude-a": "Fort",
 	"reflex-a": "Ref",
-	"environment": "Environment",
-	"organization": "Organization",
-	"challenge-rating": "Challenge Rating",
-	"challenge-rating-i": "CR",
-	"treasure": "Treasure",
-	"advancement": "Advancement",
-	"level-adjustment": "Level Adjustment",
-	"description-etc": "Description etc",
-	"combat-u": "COMBAT",
-	"combat-information": "Combat information",
-	"roll-templates": "Roll Templates",
-	"attack-roll": " Attack Roll: "
+	"environment": "Entorno",
+	"organization": "Organización",
+	"challenge-rating": "Valor de Desafío",
+	"challenge-rating-i": "VD",
+	"treasure": "Tesoro",
+	"advancement": "Avance",
+	"level-adjustment": "Ajuste de Nivel",
+	"description-etc": "Descripción etc",
+	"combat-u": "COMBATE",
+	"combat-information": "Información de combate",
+	"roll-templates": "Plantillas de Tiradas",
+	"attack-roll": " Tirada de Ataque: "
 }
